<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather and Contacts</string>
    <string name="contacts">Go To Contacts</string>
    <string name="weather">Go To Weather</string>
    <string name="remove">Remove</string>
    <string name="add">Add New Location</string>
    <string name="save">Save Location</string>
    <string name="back">Back Without Save</string>
    <string name="scale">C / F</string>
    <string name="start">To Locations</string>
    <string name="add_contact">Add New Contact</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="save_contact">Save Contact</string>
    <string name="back__contact">Back w/o Saving</string>
    <string name="email">Email</string>
    <string name="correct">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Photo</string>
    <string name="file_provider_authorities">com.pavkascool.photo</string>
</resources>
